# ai-ml-learnings

projects/quant-prop-platform/: AGENTS.md  PROJECT_OVERVIEW.md  ROADMAP.md  pyproject.toml
projects/quant-prop-platform/.agents/rules/: architecture-principles.md  fundedfirm-evaluation-rules.md  research-pipeline.md
projects/quant-prop-platform/.agents/workflows/: new-strategy.md
projects/quant-prop-platform/quantprop/: __init__.py
projects/quant-prop-platform/quantprop/analytics/: __init__.py  analytics_reporter.py
projects/quant-prop-platform/quantprop/backtest/: __init__.py  backtester.py
projects/quant-prop-platform/quantprop/data/: __init__.py  data_layer.py
projects/quant-prop-platform/quantprop/evaluation/: __init__.py  evaluation_engine.py  live_account.py
projects/quant-prop-platform/quantprop/execution/: __init__.py  base_broker.py  execution_gateway.py  mock_broker.py
projects/quant-prop-platform/quantprop/features/: __init__.py  feature_engineering.py
projects/quant-prop-platform/quantprop/ml/: __init__.py  ml_filter.py
projects/quant-prop-platform/quantprop/optimization/: __init__.py  optimizer.py
projects/quant-prop-platform/quantprop/portfolio/: __init__.py  portfolio_manager.py
projects/quant-prop-platform/quantprop/risk/: __init__.py  risk_manager.py
projects/quant-prop-platform/tests/: __init__.py  test_analytics.py  test_backtest.py  test_data_layer.py  test_evaluation.py  test_execution.py  test_features.py  test_live_account.py  test_ml.py  test_optimization.py  test_portfolio.py  test_scaffold.py
(+14 files in other folders)
